# g1sim

./: .gitignore  Makefile  README.md  pixi.toml  pyproject.toml
examples/: benchmark_warp.py  play.py  train.py
model/: download_assets.py  fake_cuda.h  g1_stripped.xml  gen_model.py  scene.xml
src/: g1_core.h  g1_kernel.cu  g1_model.h  g1_types.h  g1sim.py  host_lib.cpp  spatial.h
tests/: test_g1sim.py  test_kernel_vs_host.py  test_viewer.py  test_vs_mujoco.py
tools/: download_assets.py  gen_model.py  scene.xml
