[project]
name = "g1sim"
version = "0.1.0"
description = "Specialized GPU simulator for Unitree G1 RL locomotion"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mujoco>=3.1.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "mujoco-warp>=3.8.0.3",
    "warp-lang>=1.12.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["tests"]
